Fix jumpmark sticky title
Fix position of icons after scroll to top with jumpmark
... fix padding in sticky title

ERM30269

[4.2.x]

(cherry picked from commit b24337e9524dc08cf6ba5d1b82a99d21bb0b8eac)

--- a/resources/stylesheets/bluespice.css
+++ b/resources/stylesheets/bluespice.css
@@ -85,11 +85,18 @@ label {
 }
 #title-line.title-fixed > div {
 	padding-left: 2.5rem;
-	padding-right: 3rem;
+	padding-right: 2.5rem;
 	margin: 0 auto;
 	max-width: 100vw;
 	border-bottom: 0.05px solid var(--title-nav-border-color);
 	background-color:var(--content-bg);
+}
+
+#title-line.title-fixed h1 {
+	padding-left: 0;
+}
+#title-line.title-fixed #title-actions {
+	padding-right: 0;
 }
 
 .fs-mode-enabled #title-line.title-fixed {
